@@ -64,6 +64,17 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -113,7 +124,7 @@
     </profiles>
 
     <properties>
-        <start-class>cn.tuyucheng.taketoday.Application</start-class>
+        <start-class>cn.tuyucheng.taketoday.boot.SpringMvcApplication</start-class>
         <jpa.version>2.2</jpa.version>
         <subethasmtp.version>3.1.7</subethasmtp.version>
         <httpclient.version>4.5.13</httpclient.version>
